--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
 
     <!-- Estilos -->
-    <link rel="stylesheet" href="/src/assets/css/index.css" />
+    <link rel="stylesheet" href="./src/assets/css/index.css" />
 
     <!-- Favicon -->
-    <link rel="icon" href="/src/assets/img/logo.png" type="image/x-icon" />
+    <link rel="icon" href="./src/assets/img/logo.png" type="image/x-icon" />
   </head>
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
